# controller/internal/routes/database_router.go
@@ -19,6 +19,8 @@ package routes
 import (
 	"errors"
 	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/strfmt"
+	"github.com/michaelquigley/pfxlog"
 	"github.com/openziti/edge/controller/apierror"
 	"github.com/openziti/edge/controller/env"
 	"github.com/openziti/edge/controller/internal/permissions"
@@ -26,7 +28,10 @@ import (
 	"github.com/openziti/edge/rest_model"
 	"github.com/openziti/edge/rest_server/operations/database"
 	"github.com/openziti/fabric/controller/network"
+	"github.com/openziti/foundation/util/concurrenz"
 	"net/http"
+	"sync"
+	"time"
 )
 
 func init() {
@@ -34,7 +39,19 @@ func init() {
 	env.AddRouter(r)
 }
 
+type integrityCheckOp struct {
+	running       concurrenz.AtomicBoolean
+	results       []*rest_model.DataIntegrityCheckDetail
+	lock          sync.Mutex
+	fixingErrors  bool
+	startTime     *time.Time
+	endTime       *time.Time
+	err           error
+	tooManyErrors bool
+}
+
 type DatabaseRouter struct {
+	integrityCheck integrityCheckOp
 }
 
 func NewDatabaseRouter() *DatabaseRouter {
@@ -53,6 +70,10 @@ func (r *DatabaseRouter) Register(ae *env.AppEnv) {
 	ae.Api.DatabaseFixDataIntegrityHandler = database.FixDataIntegrityHandlerFunc(func(params database.FixDataIntegrityParams, _ interface{}) middleware.Responder {
 		return ae.IsAllowed(func(ae *env.AppEnv, rc *response.RequestContext) { r.CheckDatastoreIntegrity(ae, rc, true) }, params.HTTPRequest, "", "", permissions.IsAdmin())
 	})
+
+	ae.Api.DatabaseDataIntegrityResultsHandler = database.DataIntegrityResultsHandlerFunc(func(params database.DataIntegrityResultsParams, _ interface{}) middleware.Responder {
+		return ae.IsAllowed(func(ae *env.AppEnv, rc *response.RequestContext) { r.GetCheckProgress(rc) }, params.HTTPRequest, "", "", permissions.IsAdmin())
+	})
 }
 
 func (r *DatabaseRouter) CreateSnapshot(ae *env.AppEnv, rc *response.RequestContext) {
@@ -68,27 +89,43 @@ func (r *DatabaseRouter) CreateSnapshot(ae *env.AppEnv, rc *response.RequestCont
 }
 
 func (r *DatabaseRouter) CheckDatastoreIntegrity(ae *env.AppEnv, rc *response.RequestContext, fixErrors bool) {
-	var results []*rest_model.DataIntegrityCheckDetail
-
-	errorHandler := func(err error, fixed bool) {
-		description := err.Error()
-		results = append(results, &rest_model.DataIntegrityCheckDetail{
-			Description: &description,
-			Fixed:       &fixed,
-		})
+	if r.integrityCheck.running.CompareAndSwap(false, true) {
+		r.integrityCheck.fixingErrors = fixErrors
+		go r.runDataIntegrityCheck(ae, fixErrors)
+		rc.Respond(&rest_model.Empty{Data: map[string]interface{}{}, Meta: &rest_model.Meta{}}, http.StatusOK)
+	} else {
+		rc.RespondWithApiError(apierror.NewRateLimited())
 	}
+}
 
-	if err := ae.GetStores().CheckIntegrity(fixErrors, errorHandler); err != nil {
-		rc.RespondWithError(err)
-		return
-	}
+func (r *DatabaseRouter) GetCheckProgress(rc *response.RequestContext) {
+	integrityCheck := r.integrityCheck
+
+	integrityCheck.lock.Lock()
+	defer integrityCheck.lock.Unlock()
 
 	limit := int64(-1)
 	zero := int64(0)
-	count := int64(len(results))
+	count := int64(len(integrityCheck.results))
+
+	var err *string
+	if integrityCheck.err != nil {
+		errStr := integrityCheck.err.Error()
+		err = &errStr
+	}
+
+	inProgress := integrityCheck.running.Get()
 
 	result := rest_model.DataIntegrityCheckResultEnvelope{
-		Data: results,
+		Data: &rest_model.DataIntegrityCheckDetails{
+			EndTime:       (*strfmt.DateTime)(integrityCheck.endTime),
+			Error:         err,
+			FixingErrors:  &integrityCheck.fixingErrors,
+			InProgress:    &inProgress,
+			Results:       integrityCheck.results,
+			StartTime:     (*strfmt.DateTime)(integrityCheck.startTime),
+			TooManyErrors: &integrityCheck.tooManyErrors,
+		},
 		Meta: &rest_model.Meta{
 			Pagination: &rest_model.Pagination{
 				Limit:      &limit,
@@ -100,4 +137,44 @@ func (r *DatabaseRouter) CheckDatastoreIntegrity(ae *env.AppEnv, rc *response.Re
 	}
 
 	rc.Respond(result, http.StatusOK)
+}
+
+func (r *DatabaseRouter) runDataIntegrityCheck(ae *env.AppEnv, fixErrors bool) {
+	defer func() {
+		r.integrityCheck.lock.Lock()
+		now := time.Now()
+		r.integrityCheck.endTime = &now
+		r.integrityCheck.running.Set(false)
+		r.integrityCheck.lock.Unlock()
+	}()
+
+	r.integrityCheck.lock.Lock()
+	now := time.Now()
+	r.integrityCheck.results = nil
+	r.integrityCheck.startTime = &now
+	r.integrityCheck.endTime = nil
+	r.integrityCheck.err = nil
+	r.integrityCheck.tooManyErrors = false
+	r.integrityCheck.lock.Unlock()
+
+	logger := pfxlog.Logger()
+
+	errorHandler := func(err error, fixed bool) {
+		logger.WithError(err).Warnf("data integrity error reported. fixed? %v", fixed)
+
+		r.integrityCheck.lock.Lock()
+		defer r.integrityCheck.lock.Unlock()
+
+		if len(r.integrityCheck.results) < 1000 {
+			description := err.Error()
+			r.integrityCheck.results = append(r.integrityCheck.results, &rest_model.DataIntegrityCheckDetail{
+				Description: &description,
+				Fixed:       &fixed,
+			})
+		} else {
+			r.integrityCheck.tooManyErrors = true
+		}
+	}
+
+	r.integrityCheck.err = ae.GetStores().CheckIntegrity(fixErrors, errorHandler)
 }
