# rest_server/operations/ziti_edge_api.go
@@ -176,6 +176,9 @@ func NewZitiEdgeAPI(spec *loads.Document) *ZitiEdgeAPI {
 		TransitRouterCreateTransitRouterHandler: transit_router.CreateTransitRouterHandlerFunc(func(params transit_router.CreateTransitRouterParams, principal interface{}) middleware.Responder {
 			return middleware.NotImplemented("operation transit_router.CreateTransitRouter has not yet been implemented")
 		}),
+		DatabaseDataIntegrityResultsHandler: database.DataIntegrityResultsHandlerFunc(func(params database.DataIntegrityResultsParams, principal interface{}) middleware.Responder {
+			return middleware.NotImplemented("operation database.DataIntegrityResults has not yet been implemented")
+		}),
 		APISessionDeleteAPISessionsHandler: api_session.DeleteAPISessionsHandlerFunc(func(params api_session.DeleteAPISessionsParams, principal interface{}) middleware.Responder {
 			return middleware.NotImplemented("operation api_session.DeleteAPISessions has not yet been implemented")
 		}),
@@ -698,6 +701,8 @@ type ZitiEdgeAPI struct {
 	TerminatorCreateTerminatorHandler terminator.CreateTerminatorHandler
 	// TransitRouterCreateTransitRouterHandler sets the operation handler for the create transit router operation
 	TransitRouterCreateTransitRouterHandler transit_router.CreateTransitRouterHandler
+	// DatabaseDataIntegrityResultsHandler sets the operation handler for the data integrity results operation
+	DatabaseDataIntegrityResultsHandler database.DataIntegrityResultsHandler
 	// APISessionDeleteAPISessionsHandler sets the operation handler for the delete API sessions operation
 	APISessionDeleteAPISessionsHandler api_session.DeleteAPISessionsHandler
 	// AuthenticatorDeleteAuthenticatorHandler sets the operation handler for the delete authenticator operation
@@ -1136,6 +1141,9 @@ func (o *ZitiEdgeAPI) Validate() error {
 	}
 	if o.TransitRouterCreateTransitRouterHandler == nil {
 		unregistered = append(unregistered, "transit_router.CreateTransitRouterHandler")
+	}
+	if o.DatabaseDataIntegrityResultsHandler == nil {
+		unregistered = append(unregistered, "database.DataIntegrityResultsHandler")
 	}
 	if o.APISessionDeleteAPISessionsHandler == nil {
 		unregistered = append(unregistered, "api_session.DeleteAPISessionsHandler")
@@ -1670,10 +1678,10 @@ func (o *ZitiEdgeAPI) initHandlerCache() {
 		o.handlers["POST"] = make(map[string]http.Handler)
 	}
 	o.handlers["POST"]["/authenticate"] = authentication.NewAuthenticate(o.context, o.AuthenticationAuthenticateHandler)
-	if o.handlers["GET"] == nil {
-		o.handlers["GET"] = make(map[string]http.Handler)
+	if o.handlers["POST"] == nil {
+		o.handlers["POST"] = make(map[string]http.Handler)
 	}
-	o.handlers["GET"]["/database/check-data-integrity"] = database.NewCheckDataIntegrity(o.context, o.DatabaseCheckDataIntegrityHandler)
+	o.handlers["POST"]["/database/check-data-integrity"] = database.NewCheckDataIntegrity(o.context, o.DatabaseCheckDataIntegrityHandler)
 	if o.handlers["POST"] == nil {
 		o.handlers["POST"] = make(map[string]http.Handler)
 	}
@@ -1742,6 +1750,10 @@ func (o *ZitiEdgeAPI) initHandlerCache() {
 		o.handlers["POST"] = make(map[string]http.Handler)
 	}
 	o.handlers["POST"]["/transit-routers"] = transit_router.NewCreateTransitRouter(o.context, o.TransitRouterCreateTransitRouterHandler)
+	if o.handlers["GET"] == nil {
+		o.handlers["GET"] = make(map[string]http.Handler)
+	}
+	o.handlers["GET"]["/database/data-integrity-results"] = database.NewDataIntegrityResults(o.context, o.DatabaseDataIntegrityResultsHandler)
 	if o.handlers["DELETE"] == nil {
 		o.handlers["DELETE"] = make(map[string]http.Handler)
 	}
