# specs/swagger.yml
@@ -3,7 +3,7 @@ swagger: '2.0'
 info:
   version: 0.16.3
   title: Ziti Edge
-  contact: { }
+  contact: {}
 host: demo.ziti.dev
 basePath: /edge/v1
 schemes:
@@ -3060,28 +3060,46 @@ paths:
         '429':
           $ref: '#/responses/rateLimitedResponse'
   /database/check-data-integrity:
-    get:
-      summary: Runs an data integrity scan on the datastore and returns any found issues
-      description: Runs an data integrity scan on the datastore and returns any found issues. Requires admin access.
+    post:
+      summary: Starts a data integrity scan on the datastore
+      description: Starts a data integrity scan on the datastore. Requires admin access.
       security:
         - ztSession: [ ]
       tags:
         - Database
       operationId: checkDataIntegrity
       responses:
-        '200':
-          $ref: '#/responses/dataIntegrityCheckResult'
+        '202':
+          $ref: '#/responses/emptyResponse'
         '401':
           $ref: '#/responses/unauthorizedResponse'
+        '429':
+          $ref: '#/responses/rateLimitedResponse'
   /database/fix-data-integrity:
     post:
-      summary: Runs an data integrity scan on the datastore, attempts to fix any issues it can and returns any found issues
-      description: Runs an data integrity scan on the datastore, attempts to fix any issues it can, and returns any found issues. Requires admin access.
+      summary: Runs a data integrity scan on the datastore, attempts to fix any issues it can and returns any found issues
+      description: Runs a data integrity scan on the datastore, attempts to fix any issues it can, and returns any found issues. Requires admin access.
       security:
         - ztSession: [ ]
       tags:
         - Database
       operationId: fixDataIntegrity
+      responses:
+        '202':
+          $ref: '#/responses/emptyResponse'
+        '429':
+          $ref: '#/responses/rateLimitedResponse'
+        '401':
+          $ref: '#/responses/unauthorizedResponse'
+  /database/data-integrity-results:
+    get:
+      summary: Returns any results found from in-progress integrity checks
+      description: Returns any results found from in-progress integrity checks. Requires admin access.
+      security:
+        - ztSession: [ ]
+      tags:
+        - Database
+      operationId: dataIntegrityResults
       responses:
         '200':
           $ref: '#/responses/dataIntegrityCheckResult'
@@ -3360,7 +3378,7 @@ responses:
       'application/json':
         error:
           args:
-            urlVars: { }
+            urlVars: {}
           cause:
             field: '(root)'
             type: required
@@ -3387,7 +3405,7 @@ responses:
       'application/json':
         error:
           args:
-            urlVars: { }
+            urlVars: {}
           cause: ''
           causeMessage: ''
           code: UNAUTHORIZED
@@ -3405,7 +3423,7 @@ responses:
       'application/json':
         error:
           args:
-            urlVars: { }
+            urlVars: {}
           cause: ''
           causeMessage: ''
           code: INVALID_AUTH
@@ -3457,7 +3475,7 @@ responses:
       'application/json':
         error:
           args:
-            urlVars: { }
+            urlVars: {}
           causeMessage: 'you have hit a rate limit in the requested operation'
           code: RATE_LIMITED
           message: The resource is rate limited and the rate limit has been exceeded. Please try again later
@@ -3501,7 +3519,7 @@ responses:
       $ref: '#/definitions/currentAPISessionDetailEnvelope'
     examples:
       default:
-        meta: { }
+        meta: {}
         data:
           id: 27343114-b44f-406e-9981-f3c4f2f28d54
           createdAt: '2020-03-09T19:03:49.1883693Z'
@@ -3529,7 +3547,7 @@ responses:
       $ref: '#/definitions/currentIdentityDetailEnvelope'
     examples:
       default:
-        meta: { }
+        meta: {}
         data:
           id: 66352d7b-a6b2-4ce9-85bb-9f18e318704d
           createdAt: '2020-01-13T16:38:13.6854788Z'
@@ -3541,7 +3559,7 @@ responses:
               href: './identities/66352d7b-a6b2-4ce9-85bb-9f18e318704d'
             service-policies:
               href: './identities/66352d7b-a6b2-4ce9-85bb-9f18e318704d/identities'
-          tags: { }
+          tags: {}
           name: Default Admin
           type:
             urlName: identity-types
@@ -3555,7 +3573,7 @@ responses:
           authenticators:
             updb:
               username: admin
-          enrollment: { }
+          enrollment: {}
           roleAttributes:
             $ref: '#/definitions/attributes'
   listCurrentApiSessionCertificates:
@@ -4887,7 +4905,7 @@ definitions:
           href: "./edge-routers/b0766b8d-bd1a-4d28-8415-639b29d3c83d/edge-routers"
         self:
           href: "./edge-routers/b0766b8d-bd1a-4d28-8415-639b29d3c83d"
-      tags: { }
+      tags: {}
       name: TestRouter-e33c837f-3222-4b40-bcd6-b3458fd5156e
       fingerprint:
       roleAttributes:
@@ -4906,7 +4924,7 @@ definitions:
       enrollmentCreatedAt: '2020-03-16T17:13:31.5777637Z'
       enrollmentExpiresAt: '2020-03-16T17:18:31.5777637Z'
       hostname: ''
-      supportedProtocols: { }
+      supportedProtocols: {}
   ###################################################################
   # Edge Router Policies
   ##################################################################
@@ -5444,7 +5462,7 @@ definitions:
     type: object
     properties:
       urlVars:
-        properties: { }
+        properties: {}
         additionalProperties:
           type: string
         type: object
@@ -5458,7 +5476,7 @@ definitions:
         $ref: '#/definitions/meta'
       data:
         type: object
-        example: { }
+        example: {}
   meta:
     type: object
     properties:
@@ -6360,6 +6378,33 @@ definitions:
       meta:
         $ref: '#/definitions/meta'
       data:
+        $ref: '#/definitions/dataIntegrityCheckDetails'
+  dataIntegrityCheckDetails:
+    type: object
+    required:
+      - inProgress
+      - fixingErrors
+      - tooManyErrors
+      - startTime
+      - endTime
+      - error
+      - results
+    properties:
+      inProgress:
+        type: boolean
+      startTime:
+        type: string
+        format: date-time
+      endTime:
+        type: string
+        format: date-time
+      fixingErrors:
+        type: boolean
+      error:
+        type: string
+      tooManyErrors:
+        type: boolean
+      results:
         $ref: '#/definitions/dataIntegrityCheckDetailList'
   dataIntegrityCheckDetailList:
     type: array
